--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "dev": "nodemon index.js",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Frederick Seo",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.1",
-    "ts-node": "^10.9.2"
-  },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
+    "@types/supertest": "^6.0.2",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
